--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Country List</string>
+    <string name="web_service_failed">Fetching country list failed.  Server error.  Please try again later.</string>
 </resources>
